# uv-library

./: .gitignore  README.md  pyproject.toml
another_name/: run.py
src/: run.py
src/uv_library/: __init__.py  uv_library.py
uv_library/: main.py  run.py  sub_file.py
