[project]
name = "uv-library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src", "another_name", "uv_library", "pyproject.toml", "uv.lock", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["src", "another_name", "uv_library"]
