[project]
name = "uv-library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rachel Madden", email = "rachel.isabella.madden@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# limit which files are included in the sdist (.tar.gz) asset
include = [
    '/README.md',
    '/uv_library',
]